FIX alignment of new span/div radio and checkbox inputs
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@5711 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -48,17 +48,19 @@ input.defaultbutton {position: absolute; left: -100%; width: 0; height: 0;}
 .breakall {word-break:break-all;}
 
 /* General Form tags */
-.checkoption {display:inline-block; *display:inline;*zoom: 1;}
-.checkbox {margin: 5px; margin-right:3px;vertical-align: middle;}
-.checkboxtext {margin-right:2px;}
-.checkboxes{margin-top: 5px;}
+.checkoption {vertical-align: top;display: inline-block;width: 195px;margin: 2px; *display:inline;*zoom: 1;}
+.checkbox {margin-right: 3px;vertical-align: top;display: inline-block;*display:inline;*zoom: 1;}
+.checkboxtext {margin-right: 2px;width: 160px;display: inline-block;*display:inline;*zoom: 1;}
+.checkboxes{margin-top: 5px;padding-left: 300px;}
 .verticalcheckboxes {padding-left: 300px;}
 .checkboxtext .customFieldLabel {float:none;}
-.editcheckboxes {float:left;}
-.radioblock { float: left;width: auto;}
+.editcheckboxes {float:left;padding-left: 300px;}
+
+.radioblock { float: left;padding-left: 300px;clear: left;margin-top: -1em;}
 .radiotext label.customFieldLabel {float:none;}
-.radio{margin: 1px;vertical-align: middle;}
-.radiooption {display: inline;}
+.radiotext {margin-right: 2px;width: 160px;display: inline-block;*display:inline;*zoom: 1;}
+.radio{margin-right: 3px;vertical-align: top;display: inline-block;*display:inline;*zoom: 1;}
+.radiooption {vertical-align: top;display: inline-block;width: 195px;margin: 2px; *display:inline;*zoom: 1;}
 #custom_access {padding-left: 300px;}
 #custom_access .radiooptions{margin: 5px;}
 
@@ -439,7 +441,7 @@ div.autocomplete ul li {
 
 #overlay{ position: absolute; top: 0; left: 0; z-index: 90; width: 100%; height: 500px; background-color: #000; }
 
-.FormHelp{margin: 0px 0px 10px 240px;padding: 0;}
+.FormHelp{margin: 0px 0px 10px 300px;padding: 0;}
 .FormHelpInner{background-color:#ffffff;border:1px solid #000000;    border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;width:360px;padding:5px;margin:10px 0 0 0;color:black;}
 
 #ThemeBox {padding:0;margin:0;text-align:left;width: 170px;}
